--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -44,6 +44,11 @@
     "wrongName": "Такое имя уже занято, придумайте другое",
     "net": "Ошибка соединения. Обновите страницу и попробуйте ещё раз."
   },
+  "notify": {
+    "rename": "Канал переименован",
+    "remove": "Канал удален",
+    "add": "Канал создан"
+  },
   "other": {
     "404": "Страница не найдена"
   }
