Add errors notifications

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -38,7 +38,7 @@
     "shortPassword": "Слишком короткий пароль",
     "requiredName": "Введите имя",
     "requiredPassword": "Введите пароль",
-    "nameLength": "Введите имя от 3 до 20 символов",
+    "nameLength": "Введите имя от 4 до 20 символов",
     "requiredConfirmPassword": "Подтвердите пароль",
     "confirmedPassword": "Пароли должны совпадать",
     "wrongName": "Такое имя уже занято, придумайте другое",
@@ -47,7 +47,10 @@
   "notify": {
     "rename": "Канал переименован",
     "remove": "Канал удален",
-    "add": "Канал создан"
+    "add": "Канал создан",
+    "sendError": "Сообщение не отправлено. Попробуйте еще раз",
+    "socketError": "Ошибка соединения. Попробуйте еще раз",
+    "serverError": "Сервер не отвечает. Попробуйте еще раз"
   },
   "other": {
     "404": "Страница не найдена"
