Change error texts

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -35,14 +35,14 @@
   },
   "errors": {
     "auth": "Неверные имя пользователя или пароль",
-    "shortPassword": "Слишком короткий пароль",
+    "shortPassword": "Не менее 6 символов",
     "requiredName": "Введите имя",
     "requiredPassword": "Введите пароль",
-    "nameLength": "Введите имя от 4 до 20 символов",
+    "nameLength": "От 3 до 20 символов",
     "requiredConfirmPassword": "Подтвердите пароль",
     "confirmedPassword": "Пароли должны совпадать",
     "wrongName": "Такое имя уже занято, придумайте другое",
-    "net": "Ошибка соединения. Обновите страницу и попробуйте ещё раз."
+    "net": "Ошибка соединения"
   },
   "notify": {
     "rename": "Канал переименован",
