--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -36,8 +36,7 @@
   "errors": {
     "auth": "Неверные имя пользователя или пароль",
     "shortPassword": "Не менее 6 символов",
-    "requiredName": "Введите имя",
-    "requiredPassword": "Введите пароль",
+    "required": "Обязательное поле",
     "nameLength": "От 3 до 20 символов",
     "requiredConfirmPassword": "Подтвердите пароль",
     "confirmedPassword": "Пароли должны совпадать",
