Add aria-label for input Chatbox

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -31,7 +31,8 @@
     "modalConfirm": "Отправить"
   },
   "chatbox": {
-    "input": "Введите сообщение"
+    "input": "Введите сообщение",
+    "newMessage": "Новое сообщение"
   },
   "errors": {
     "auth": "Неверные имя пользователя или пароль",
