Change text for notify

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -47,11 +47,11 @@
   },
   "notify": {
     "rename": "Канал переименован",
-    "remove": "Канал удален",
+    "remove": "Канал удалён",
     "add": "Канал создан",
-    "sendError": "Сообщение не отправлено. Попробуйте еще раз",
-    "socketError": "Ошибка соединения. Попробуйте еще раз",
-    "serverError": "Сервер не отвечает. Попробуйте еще раз"
+    "sendError": "Сообщение не отправлено. Попробуйте ещё раз",
+    "socketError": "Ошибка соединения. Попробуйте ещё раз",
+    "serverError": "Сервер не отвечает. Попробуйте ещё раз"
   },
   "other": {
     "404": "Страница не найдена"
