Normalize channels names

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -42,7 +42,7 @@
     "nameLength": "От 3 до 20 символов",
     "requiredConfirmPassword": "Подтвердите пароль",
     "confirmedPassword": "Пароли должны совпадать",
-    "wrongName": "Такое имя уже занято, придумайте другое",
+    "wrongName": "Должно быть уникальным",
     "net": "Ошибка соединения"
   },
   "notify": {
